--- a/sass/components/_strong-section.scss
+++ b/sass/components/_strong-section.scss
@@ -2,12 +2,20 @@
   padding-top: 94px;
   padding-bottom: 94px;
   display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 
   justify-content: space-between;
 }
 
 .strong-container__list {
-  flex-basis: calc((100% - 30px * 3) / 4);
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 30px * 3) / 4);
+  }
 }
 
 .strong-list__item {
@@ -17,7 +25,14 @@
 
   margin-bottom: 30px;
 
-  width: 270px;
+  @media screen and (max-width: 767) {
+    width: 100vw;
+  }
+
+  // @media screen and (max-width: 1199) {
+  //   width: 50vw;
+  // }
+
   height: 120px;
 
   background-color: var(--item-color);
