created folder of teammates

--- a/css/main.css
+++ b/css/main.css
@@ -896,7 +896,13 @@ ul {
 }
 
 .work-page {
+  display: none;
   padding-bottom: 94px;
+}
+@media screen and (min-width: 1200px) {
+  .work-page {
+    display: block;
+  }
 }
 
 .work-list {
