--- a/css/main.css
+++ b/css/main.css
@@ -999,9 +999,13 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+@media screen and (min-width: 480px) {
+  .team-list {
+    gap: 30px;
+  }
 }
 
 .container-card-team {
@@ -1075,9 +1079,14 @@ ul {
 
 .card-worker {
   background-color: var(--primary-bcg-color);
-  width: calc((100% - 90px) / 4);
+  width: 100%;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 1200px) {
+  .card-worker {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 .clients-page {
