--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -11,7 +11,11 @@
 }
 .team-list {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  // justify-content: space-between;
+  @media screen and (min-width: 480px) {
+    gap: 30px;
+  }
 }
 .container-card-team {
   padding-top: 30px;
@@ -75,7 +79,15 @@
 
 .card-worker {
   background-color: var(--primary-bcg-color);
-  width: calc((100% - 30px * 3) / 4);
+  width: 100%;
+
+  
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 30px * 3) / 4);
+    // justify-content: center;
+  }
+  
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
