--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -2,7 +2,7 @@
   padding-top: 94px;
   padding-bottom: 94px;
 }
- 
+
 .team .title {
   margin-bottom: 50px;
 }
@@ -81,13 +81,16 @@
   background-color: var(--primary-bcg-color);
   width: 100%;
 
-  
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+    // justify-content: center;
+  }
 
   @media screen and (min-width: 1200px) {
     width: calc((100% - 30px * 3) / 4);
     // justify-content: center;
   }
-  
+
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
