--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -5,11 +5,25 @@
 .btn-list {
   display: flex;
   justify-content: center;
-  margin-bottom: 50px;
+  
+  
+
+  @media screen and (min-width: 480px) {
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
-.btn-list > li + li {
-  margin-left: 8px;
-}
+// .btn-list > li + li {
+//   margin-left: 8px;
+// }
 .project-list {
     display: flex;
     flex-wrap: wrap;
