--- a/sass/components/_project-element.scss
+++ b/sass/components/_project-element.scss
@@ -1,7 +1,12 @@
 .project-element {
   margin-top: var(--card-set-gap);
   margin-left: var(--card-set-gap);
-  flex-basis: calc(100% / 3 - var(--card-set-gap));
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - var(--card-set-gap));
+  }
+
+  // flex-basis: calc(100% / 3 - var(--card-set-gap));
 }
 .project-link {
   display: block;
@@ -68,6 +73,10 @@
   line-height: 2;
 
   letter-spacing: 0.06em;
+
+  
+
+  
 
   color: var(--primary-title-color);
 }
