--- a/css/main.css
+++ b/css/main.css
@@ -1283,19 +1283,27 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-column-gap: 8px;
+     -moz-column-gap: 8px;
+          column-gap: 8px;
 }
 @media screen and (min-width: 480px) {
   .btn-list {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    width: 330px;
     margin-bottom: 40px;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
   }
 }
 @media screen and (min-width: 768px) {
   .btn-list {
+    width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-bottom: 30px;
   }
 }
@@ -1303,6 +1311,10 @@ ul {
   .btn-list {
     margin-bottom: 50px;
   }
+}
+
+.btn-list > li:nth-child(-n+3) {
+  margin-bottom: 15px;
 }
 
 .project-list {
@@ -1325,6 +1337,12 @@ ul {
   .project-element {
     -ms-flex-preferred-size: calc(50% - var(--card-set-gap));
         flex-basis: calc(50% - var(--card-set-gap));
+  }
+}
+@media screen and (min-width: 1200px) {
+  .project-element {
+    -ms-flex-preferred-size: calc(33.3333333333% - var(--card-set-gap));
+        flex-basis: calc(33.3333333333% - var(--card-set-gap));
   }
 }
 
