--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -4,16 +4,21 @@
 }
 .btn-list {
   display: flex;
-  justify-content: center;
+  
+  column-gap: 8px;
   
   
 
   @media screen and (min-width: 480px) {
     flex-wrap: wrap;
+    width: 330px;
     margin-bottom: 40px;
+    justify-content: left;
   }
 
   @media screen and (min-width: 768px) {
+    width: 100%;
+    justify-content: center;
     margin-bottom: 30px;
   }
 
@@ -21,8 +26,16 @@
     margin-bottom: 50px;
   }
 }
-// .btn-list > li + li {
+.btn-list>li:nth-child(-n + 3){
+  margin-bottom: 15px;
+}
+// .btn-list> li + li  {
 //   margin-left: 8px;
+//   @media screen and (min-width: 480px) {
+
+//     margin-bottom: 15px;
+//     width: 130px;
+//   }
 // }
 .project-list {
     display: flex;
@@ -31,4 +44,6 @@
     /*justify-content: space-between;*/
     margin-top: calc(-1 * var(--card-set-gap));
     margin-left: calc(-1 * var(--card-set-gap));
+    
+    
   }
