--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -8,17 +8,17 @@
 
   background-color: rgba(0, 0, 0, 0.2);
 
+  overflow-y: scroll;
+
   transition: opacity 150ms linear, visibility 150ms linear;
 }
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-
-  padding: 40px;
   transform: translate(-50%, -50%);
+  padding: 40px;
 
-  width: 528px;
   min-height: 581px;
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -28,10 +28,21 @@
   background-color: #ffffff;
 
   transition: transform 250ms linear, opacity 250ms linear;
-  /*animation: rotate-modal 500ms cubic-bezier(0.4, 0, 0.2, 1)
-     150ms 1 alternate forwards;*/
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+    margin-top: 93px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+  }
 }
-.modal-pole{
+.modal-pole {
   display: block;
 }
 .backdrop.is-hidden .modal {
