--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,6 +25,7 @@
 @import './components/project-element';
 @import './components/modal-window';
 @import './components/form-hero';
+@import './components/mobile-menu';
 
 // animations
 @import './components/animations'
