--- a/css/main.css
+++ b/css/main.css
@@ -517,6 +517,10 @@ body {
   color: #757575;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 /*=========
    Reset start
    ===========*/
@@ -572,11 +576,28 @@ ul {
   color: var(--accent-color);
   font-family: "Raleway", sans-serif;
   text-decoration: none;
-  margin-right: 93px;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
   letter-spacing: 0.03em;
+}
+@media screen and (min-width: 480px) {
+  .logo-header {
+    padding: 16px 0;
+    font-size: 24px;
+    line-height: 1.17;
+  }
+}
+@media screen and (min-width: 768px) {
+  .logo-header {
+    margin-right: 87px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo-header {
+    padding: 0;
+    font-size: 26px;
+    line-height: 1.19;
+    margin-right: 93px;
+  }
 }
 
 .logo-span {
@@ -630,18 +651,41 @@ ul {
   padding-bottom: 32px;
 }
 
-.contact-header {
-  margin-left: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 50px;
+@media screen and (min-width: 480px) {
+  .contact-header {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .contact-header {
+    margin-left: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact-header {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 50px;
+  }
 }
 .contact-header__item {
   color: var(--primary-text-color);
@@ -675,6 +719,19 @@ ul {
   letter-spacing: 0.02em;
 }
 
+@media screen and (min-width: 480px) {
+  .nav__list {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .nav-item {
   position: relative;
   color: var(--primary-title-color);
@@ -687,17 +744,18 @@ ul {
 .streaming-page {
   color: var(--accent-color);
 }
-
-.streaming-page::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 4px;
-  width: 100%;
-  border-radius: 2px;
-  -webkit-animation: streaming-page-animation 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms 1 alternate forwards;
-          animation: streaming-page-animation 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms 1 alternate forwards;
+@media screen and (min-width: 768px) {
+  .streaming-page::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 4px;
+    width: 100%;
+    border-radius: 2px;
+    -webkit-animation: streaming-page-animation 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms 1 alternate forwards;
+            animation: streaming-page-animation 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms 1 alternate forwards;
+  }
 }
 
 /*----hover and focus for all header----*/
@@ -1428,6 +1486,7 @@ ul {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
   -webkit-transition: opacity 150ms linear, visibility 150ms linear;
   transition: opacity 150ms linear, visibility 150ms linear;
 }
@@ -1436,10 +1495,9 @@ ul {
   position: absolute;
   top: 50%;
   left: 50%;
-  padding: 40px;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 528px;
+  padding: 40px;
   min-height: 581px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1449,8 +1507,22 @@ ul {
   transition: opacity 250ms linear, -webkit-transform 250ms linear;
   transition: transform 250ms linear, opacity 250ms linear;
   transition: transform 250ms linear, opacity 250ms linear, -webkit-transform 250ms linear;
-  /*animation: rotate-modal 500ms cubic-bezier(0.4, 0, 0.2, 1)
-     150ms 1 alternate forwards;*/
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    margin-top: 93px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    margin: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
 }
 
 .modal-pole {
@@ -1499,11 +1571,20 @@ ul {
 .hero-form-text {
   margin-bottom: 12px;
   font-size: 20px;
-  line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-title-color);
   font-weight: 700;
+}
+@media screen and (min-width: 480px) {
+  .hero-form-text {
+    line-height: 1.5;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero-form-text {
+    line-height: 1.15;
+  }
 }
 
 .modal-group-name,
@@ -1511,6 +1592,16 @@ ul {
 .modal-group-mail {
   display: block;
   margin-bottom: 10px;
+}
+
+.modal-group-name,
+.modal-group-phone,
+.modal-group-mail,
+.modal-group-comment {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
 }
 
 .modal-group-name,
@@ -1550,6 +1641,28 @@ ul {
 .hero-user-phone:focus + .modal-name-icon,
 .hero-user-mail:focus + .modal-name-icon {
   fill: var(--accent-color);
+}
+
+.hero-comment {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.01em;
+}
+.hero-comment::-webkit-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.hero-comment::-moz-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.hero-comment:-ms-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.hero-comment::-ms-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.hero-comment::placeholder {
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .modal-pole {
@@ -1631,6 +1744,16 @@ ul {
 .text-agreement {
   display: inline-block;
 }
+@media screen and (min-width: 480px) {
+  .text-agreement {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    /* identical to box height */
+    letter-spacing: 0.03em;
+    color: #757575;
+  }
+}
 
 .agreement-link {
   color: var(--accent-color);
@@ -1641,6 +1764,180 @@ ul {
   display: block;
   padding: 10px 52px;
   margin: 0 auto;
+}
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+@media (max-width: 767px) {
+  .menu {
+    display: none;
+  }
+}
+.menu .link {
+  padding: 10px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.menu .link:hover,
+.menu .link:focus {
+  text-decoration: underline;
+}
+
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: auto;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+.menu-toggle:hover .mobile-menu-open, .menu-toggle:focus .mobile-menu-open, .menu-toggle:hover .mobile-menu-close, .menu-toggle:focus .mobile-menu-close {
+  fill: var(--accent-color);
+}
+.menu-toggle.menu-toggle-open {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.menu-toggle.menu-toggle-close {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+@media screen and (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: #ffffff;
+  z-index: 999;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  transition: -webkit-transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: #fff;
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  margin-bottom: auto;
+}
+
+.mobile-menu .link {
+  display: block;
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
+  color: var(--primary-title-color);
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+}
+.mobile-menu .link.streaming-page {
+  color: var(--accent-color);
+}
+
+.mobile-contacts {
+  margin-bottom: 64px;
+}
+.mobile-contacts > :not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-contacts-link,
+.mobile-sicials-link {
+  text-decoration: none;
+}
+
+.mobile-contacts-link.phone-link {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.mail-link {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+
+.mobile-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+
+.mobile-socials-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  text-decoration: none;
 }
 
 @-webkit-keyframes streaming-page-animation {
