--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,5 +1,9 @@
 body {
-    font-family: "Roboto", sans-serif;
-    background-color: #ffffff;
-    color: #757575;
-  }
+  font-family: "Roboto", sans-serif;
+  background-color: #ffffff;
+  color: #757575;
+}
+
+body.modal-open{
+  overflow: hidden;
+}
