--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,26 +4,40 @@
   font-family: "Raleway", sans-serif;
   text-decoration: none;
 
-  margin-right: 93px;
-
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+
   letter-spacing: 0.03em;
+
+  @media screen and (min-width: 480px) {
+    padding: 16px 0;
+    font-size: 24px;
+    line-height: 1.17;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-right: 87px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 0;
+    font-size: 26px;
+    line-height: 1.19;
+    margin-right: 93px;
+  }
 }
 .logo-span {
   color: var(--logo-black-color);
 }
 .logo-footer {
-    display: block;
-    margin-bottom: 20px;
-  
-    font-family: Raleway;
-    font-size: 26px;
-    line-height: 1.19;
-    text-decoration: none;
-    font-weight: 700;
-    letter-spacing: 0.03em;
-  
-    color: var(--accent-color);
-  }
+  display: block;
+  margin-bottom: 20px;
+
+  font-family: Raleway;
+  font-size: 26px;
+  line-height: 1.19;
+  text-decoration: none;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+
+  color: var(--accent-color);
+}
