--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,3 +1,13 @@
+.nav__list {
+  @media screen and (min-width: 480px) {
+    display: none;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+
 .nav-item {
   position: relative;
 
@@ -9,21 +19,25 @@
 }
 .streaming-page {
   color: var(--accent-color);
+  
+  @media screen and (min-width: 768px) {
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+
+      height: 4px;
+      width: 100%;
+      border-radius: 2px;
+
+      animation: streaming-page-animation 250ms cubic-bezier(0.4, 0, 0.2, 1)
+        250ms 1 alternate forwards;
+    }
+  }
 }
 
-.streaming-page::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
 
-  height: 4px;
-  width: 100%;
-  border-radius: 2px;
-
-  animation: streaming-page-animation 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms 1
-    alternate forwards;
-}
 
 /*----hover and focus for all header----*/
 .nav-item:hover,
