--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,12 +1,19 @@
-.menu {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
+// .menu {
+//   display: flex;
+//   padding: 0;
+//   margin: 0;
+//   list-style: none;
+// }
 
-@media (max-width: 767px) {
-  .menu {
+// @media (max-width: 767px) {
+//   .menu {
+//     display: none;
+//   }
+// }
+
+.menu-container{
+  
+  @media screen and (min-width: 768px) {
     display: none;
   }
 }
