--- a/css/main.css
+++ b/css/main.css
@@ -608,12 +608,22 @@ ul {
   display: block;
   margin-bottom: 20px;
   font-family: Raleway;
-  font-size: 26px;
-  line-height: 1.19;
   text-decoration: none;
   font-weight: 700;
   letter-spacing: 0.03em;
   color: var(--accent-color);
+}
+@media screen and (min-width: 768px) {
+  .logo-footer {
+    font-size: 24px;
+    line-height: 1.17;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo-footer {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .pole-header {
@@ -1226,13 +1236,27 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 170px;
   height: 92px;
   color: #afb1b8;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .clients__link {
+    width: 210px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .clients__link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__link {
+    width: 170px;
+  }
 }
 .clients__link:hover, .clients__link:focus {
   border-color: var(--accent-color);
@@ -1246,16 +1270,80 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  gap: 70px;
   padding-top: 60px;
   padding-bottom: 60px;
+}
+@media screen and (min-width: 480px) {
+  .footer-container {
+    gap: 60px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-container {
+    gap: 0;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .footer-container > {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    gap: 70px;
+  }
 }
 
 .basement {
   background-color: var(--secondary-bcg-color);
+}
+
+.adress-footer,
+.adres-list,
+.socials-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .adress-footer {
+    margin-bottom: 60px;
+    margin-right: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .adress-footer {
+    margin-bottom: 0;
+    margin-right: 0;
+  }
 }
 
 .footer-span {
@@ -1299,8 +1387,28 @@ ul {
   margin-bottom: 20px;
 }
 
-.form-footer {
-  margin-left: auto;
+@media screen and (min-width: 480px) {
+  .form-footer {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form-footer {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin-left: auto;
+  }
 }
 .form-footer__text {
   font-size: 14px;
@@ -1310,13 +1418,42 @@ ul {
   color: #ffffff;
   margin-bottom: 20px;
 }
+@media screen and (min-width: 768px) {
+  .form-footer__text {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form-footer__text {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
 .form-footer__label {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
+.form-footer__shell {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .form-footer__shell {
+    display: block;
+  }
+}
 
 .mail-ftr-form {
-  width: 358px;
   padding: 15px 16px;
   color: inherit;
   background-color: transparent;
@@ -1327,6 +1464,16 @@ ul {
   outline: none;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .mail-ftr-form {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mail-ftr-form {
+    width: 358px;
+  }
 }
 .mail-ftr-form:hover, .mail-ftr-form:focus {
   border-color: var(--accent-color);
@@ -1766,20 +1913,12 @@ ul {
   margin: 0 auto;
 }
 
-.menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-@media (max-width: 767px) {
-  .menu {
+@media screen and (min-width: 768px) {
+  .menu-container {
     display: none;
   }
 }
+
 .menu .link {
   padding: 10px;
   color: inherit;
