--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -16,7 +16,6 @@
     
 
     align-items: center;
-    width: 170px;
     height: 92px;
     color: #afb1b8;
     border: 1px solid #afb1b8;
@@ -24,6 +23,18 @@
 
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 480px) {
+      width: 210px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 226px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 170px;
+    }
 
       &:hover,
       &:focus {
