--- a/sass/components/_form-footer.scss
+++ b/sass/components/_form-footer.scss
@@ -1,5 +1,16 @@
 .form-footer {
-  margin-left: auto;
+  @media screen and (min-width: 480px) {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: fit-content;
+    margin-left: auto;
+  }
+
   &__text {
     font-size: 14px;
     line-height: 16px;
@@ -9,16 +20,39 @@
     color: #ffffff;
 
     margin-bottom: 20px;
+    @media screen and (min-width: 768px) {
+      margin-left: auto;
+      margin-right: auto;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-left: 0;
+      margin-right: 0;
+    }
   }
   &__label {
     letter-spacing: 0.03em;
 
     color: rgba(255, 255, 255, 0.6);
   }
+  &__shell {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    @media screen and (min-width: 1200px) {
+      display: block;
+    }
+  }
 }
 
 .mail-ftr-form {
-  width: 358px;
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+  }
 
   padding: 15px 16px;
 
