--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -33,11 +33,19 @@
   margin-bottom: 20px;
 
   font-family: Raleway;
-  font-size: 26px;
-  line-height: 1.19;
   text-decoration: none;
   font-weight: 700;
   letter-spacing: 0.03em;
 
   color: var(--accent-color);
+
+  @media screen and (min-width: 768px) {
+    font-size: 24px;
+    line-height: 1.17;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
