--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -4,10 +4,8 @@
 }
 .btn-list {
   display: flex;
-  
+
   column-gap: 8px;
-  
-  
 
   @media screen and (min-width: 480px) {
     flex-wrap: wrap;
@@ -26,24 +24,19 @@
     margin-bottom: 50px;
   }
 }
-.btn-list>li:nth-child(-n + 3){
+.btn-list > li:nth-child(-n + 3) {
   margin-bottom: 15px;
 }
-// .btn-list> li + li  {
-//   margin-left: 8px;
-//   @media screen and (min-width: 480px) {
 
-//     margin-bottom: 15px;
-//     width: 130px;
-//   }
-// }
 .project-list {
-    display: flex;
-    flex-wrap: wrap;
-    /*flex-basis: calc((100% - 30px * 2) / 3);*/
-    /*justify-content: space-between;*/
-    margin-top: calc(-1 * var(--card-set-gap));
-    margin-left: calc(-1 * var(--card-set-gap));
-    
-    
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--card-set-gap));
+  margin-left: calc(-1 * var(--card-set-gap));
+
+  & > :first-child .nm-project {
+    @media screen and (min-width: 768px) {
+      padding-bottom: 56px;
+    }
   }
+}
